# Simple-C-SDL2-wrapper-class

./: .CMakeLists.txt.swp  CMakeLists.txt  README.md  sdlclass.cpp  sdlclass.hpp
